# arduino

./: .gitmodules  _init.sh  mock_srcp.py
DigiOak/BlinkTest/: BlinkTest.ino
DigiX/Blink_Digix_test_1/: Blink_Digix_test_1.ino
DigiX/DigiX_LCD_I2C/: DigiX_LCD_I2C.ino  LiquidCrystal_I2C.cpp__  LiquidCrystal_I2C.h__
DigiX/DigiX_Test_Extensive_EEPROM_overview/: DigiX_Test_Extensive_EEPROM_overview.ino
DigiX/DigiX_Test_NCE_USB/: DigiX_Test_NCE_USB.ino
DigiX/Digix_8_SolidStateRelays/: Digix_8_SolidStateRelays.ino
DigiX/Digix_Test_i2c/: Digix_Test_i2c.ino
DigiX/LayoutWifi/: FBSwitchSensor.cpp  FBSwitchSensor.h  GATurnout.h  LayoutWifi.ino  Logger.h  RalfDigiFi.cpp  SRCPDeviceManager.cpp  SRCPFeedback.h  SRCPGenericAccessoire.h  SRCPParser.cpp  SRCPParser.h  SRCPServerSerial1.cpp  SRCPServerSerial1.h  SRCPSession.cpp  _LayoutWifiTest.cpp  _test.sh
DigiX/LayoutWifiMockSrcp/: LayoutWifiMockSrcp.ino  RalfDigiFi.cpp  RalfDigiFi.h
DigiX/LayoutWifiSRCP/: GALed.h  GATurnout.cpp  RalfDigiFi.h  SRCPCommand.h  SRCPDevice.h  SRCPDeviceManager.h  SRCPMessages.cpp  SRCPMessages.h
ESP32-CAM/CameraWebServer1/: CameraWebServer1.ino  app_httpd.cpp
ESP32-CAM/CameraWebServer2/: CameraWebServer2.ino
ESP32-CAM/GradeCrossingVision/: GradeCrossingVision.ino  cam_frame.h  cam_frame_pool.h  cam_stats.h  camera_index.h  camera_task.cpp  camera_task.h  common.h  control.cpp  shared_buf.cpp  shared_buf.h  vscode.code-workspace  web_config.cpp  web_control.cpp  web_task.cpp  web_task.h
ESP32-CAM/MicroPython/: .ampy  webcam.py
ESP32-CAM/Rust/: README.md  export-esp.ps1  export-esp.sh
ESP32-CAM/Rust/esp-rs-no_std/: .gitignore  Cargo.toml
ESP32-CAM/RustExperiment/: README.md  export-esp.sh  rust-toolchain.toml
ESP32/GraphicsTest_LED_Test/: GraphicsTest_LED_Test.ino
ESP32/MicroPython/: .ampy  main.py
ESP32/MicroPython_2019/: .ampy
ESP32/MicroPython_2023/: .ampy  _put.sh  _run.sh  main.py  vl53l0x.py
ESP32/PIR_LED_Test/: PIR_LED_Test.ino
ESP32/RS485_Test/: RS485_Test.ino
ESP32/TestVL53L0X/: TestVL53L0X.ino
ESP32/rust_test1/: espup.toml  export-esp.ps1  export-esp.sh  template_values.txt
ESP32/rust_test1/esp-r1/: Cargo.toml
ESP32/rust_test1/esp-r1/.cargo/: config.toml
ESP32/rust_test1/esp-r1/src/: main.rs
digispark ino projects/DigiHCRS04/: DigiHCRS04.ino
digispark ino projects/DigiRelay1/: DigiRelay1.ino
digispark ino projects/DigiRelay2_Portal/: DigiRelay2_Portal.ino
layout_wifi/: translate.py  translate_test.py
nce_bin/: mock_nce.py
srcp/: mock_srcp.py
translator_server/: _clean.sh  _install_go.sh  _setup.sh  translator_server.go
(+196 files in other folders)
