[package]
edition      = "2021"
name         = "esp-rs-exp"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "esp-rs-exp"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
